fix tagline issues on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,9 @@
 /* this sets up cross browser box sizing */
 
 
-/*body, header, nav, footer, section, article, div, .container, .topright, .missiontext {
+body, header, nav, footer, section, article, div, .container, .topright, .missiontext {
 border: 1px solid red !important;
-}*/
+}
 /* this sets up a border to easily see our columns settup */
 
 * {
@@ -71,8 +71,9 @@ header {
 
 p {
     margin: 10px;
-    color: #42A5F5;
-    word-wrap: normal;
+    color: #fbfbfb;
+    font-family: 'Great Vibes', cursive;
+    font-size: 2em;
 }
 /* the above margin applies to all p elements and heeps them 10 px from the edge of the box */
 
@@ -110,31 +111,31 @@ hr {
 }
 
 .tag-line {
-    font-family: 'Great Vibes', cursive;
+      position: absolute;
+      top: 15px;
+      z-index: 2;
+      width:40%;
+      max-width: 414px;
+      min-width: 320px;
+      overflow: hidden;
+      background: hsla(212, 80%, 42%, 0.29);
+      color: #fbfbfb;
+      margin: 0 auto;
+      left: 0;
+      right: 0;
+      text-align: -webkit-center;
+      font-family: 'Great Vibes', cursive;
 }
 
-.top-right {
-    position: absolute;
-    top: 100px;
-    font-size: 60px;
-    text-align: center;
-    color: #fbfbfb;
-    background-color: hsla(212, 80%, 42%, 0.28);
-    width: inherit;
-}
-
-.intro {
-}
-
-.projects {
-}
+/*/*    font-family: 'Great Vibes', cursive;*/
 
 @media screen and (max-width: 425px) {
     .nameplate {
         position: relative;
         top: 0px;
         width: inherit;
-        background-color: hsla(212, 80%, 42%, 0.28);
+
+        background-color: #fbfbfb;
     }
 
     h1 {
@@ -144,12 +145,5 @@ hr {
     h2 {
         font-size: 20px;
     }
-
-    .top-right {
-        font-size: 20px;
-        top: 10px;
-        padding: 22px;
-    };
-}
 
 
